--- a/src/scss/qc-sgd-no-grid.scss
+++ b/src/scss/qc-sgd-no-grid.scss
@@ -1,12 +1,11 @@
 @use "qc-design-tokens";
 @use "modern-css-reset/src/reset";
-@use "typography"  as *;
-@use "colors" as *;
-@use "figure" as *;
-@use "lists" as *;
-@use "fonts" as *;
-@use "shadings" as *;
-@use "tables" as *;
-@use "./components/common" as *;
+@use "base/typography"  as *;
+@use "base/colors" as *;
+@use "base/figure" as *;
+@use "base/lists" as *;
+@use "base/fonts" as *;
+@use "base/shadings" as *;
+@use "base/tables" as *;
 @use "./components/icons" as *;
 @use "./components/notice" as *;
