--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700");
 :root {
   --qc-font-family-roboto: Roboto,sans-serif;
@@ -209,14 +210,112 @@ select {
     scroll-behavior: auto;
   }
   *,
-*::before,
-*::after {
+  *::before,
+  *::after {
     animation-duration: 0.01ms !important;
     animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
 }
+/* TODO voir si meilleure façon d'intégrer en scss... */
+.qc-icon {
+  display: inline-block;
+  content: "";
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% auto;
+  min-width: 32px;
+  height: 32px;
+}
+.qc-icon.qc-icon-sm {
+  min-width: 12px;
+  height: 12px;
+}
+.qc-icon.qc-icon-md {
+  min-width: 20px;
+  height: 20px;
+}
+.qc-icon.qc-icon-lg {
+  min-width: 40px;
+  height: 40px;
+}
+.qc-icon.qc-external-link {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#external-link);
+}
+.qc-icon.qc-warning {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#warning);
+}
+.qc-icon.qc-arrow-up-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#arrow-up-white);
+}
+.qc-icon.qc-clipboard {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#clipboard);
+}
+.qc-icon.qc-error {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#error);
+}
+.qc-icon.qc-error-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#error-white);
+}
+.qc-icon.qc-information {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#information);
+}
+.qc-icon.qc-information-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#information-white);
+}
+.qc-icon.qc-minus {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#minus);
+}
+.qc-icon.qc-plus {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#plus);
+}
+.qc-icon.qc-question-mark {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#question-mark);
+}
+.qc-icon.qc-success {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#success);
+}
+.qc-icon.qc-success-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#success-white);
+}
+.qc-icon.qc-xclose-white {
+  width: 16px;
+  height: 16px;
+  min-width: 16px;
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#xclose-white);
+}
+.qc-icon.qc-xclose-blue {
+  width: 16px;
+  height: 16px;
+  min-width: 16px;
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#xclose-blue);
+}
+.qc-icon.qc-chevron-blue, .qc-icon.qc-chevron-white {
+  width: 16px;
+  min-width: 16px;
+  height: 10px;
+}
+.qc-icon.qc-chevron-blue {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#chevron-blue);
+}
+.qc-icon.qc-chevron-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#chevron-white);
+}
+.qc-icon.qc-facebook {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#facebook);
+}
+.qc-icon.qc-linkedin {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#linkedin);
+  height: 30px;
+}
+.qc-icon.qc-twitter {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#twitter);
+}
+.qc-icon.qc-youtube {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#youtube);
+}
+
 :root {
   font-size: 62.5%;
 }
@@ -224,6 +323,7 @@ select {
 body {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-regular);
   font-family: var(--qc-font-family-content);
   background-color: var(--qc-color-white);
   color: var(--qc-color-text-primary);
@@ -295,6 +395,7 @@ h1:after, .qc-h1:after {
 .qc-subhead {
   font-size: var(--qc-font-size-sm);
   line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
 }
 .qc-subhead + h1, .qc-subhead + h2, .qc-subhead + h3, .qc-subhead + h4, .qc-subhead + h5, .qc-subhead + h6,
 .qc-subhead + .qc-h1, .qc-subhead + .qc-h2, .qc-subhead + .qc-h3, .qc-subhead + .qc-h4, .qc-subhead + .qc-h5, .qc-subhead + .qc-h6 {
@@ -313,6 +414,7 @@ img {
 
 a {
   color: var(--qc-color-link-text);
+  /* to assure non breaking space inter last word and icon */
 }
 a:visited {
   color: var(--qc-color-link-visited);
@@ -324,10 +426,10 @@ a:hover, a:focus {
 a:active {
   color: var(--qc-color-link-active);
 }
-a .external-link-tail {
+a .qc-external-link-tail {
   white-space: nowrap;
 }
-a .external-link-img {
+a .qc-external-link-tail img {
   max-height: 1.1rem;
   max-width: 1.1rem;
   margin-bottom: 0.16rem;
@@ -339,6 +441,295 @@ code, .qc-code {
   font-family: var(--qc-font-family-code);
 }
 
+.qc-bg-color-white {
+  background-color: white;
+}
+
+.qc-bg-color-blue-pale {
+  background-color: #dae6f0;
+}
+
+.qc-bg-color-blue-light {
+  background-color: #4a98d9;
+}
+
+.qc-bg-color-blue-regular {
+  background-color: #1479cc;
+}
+
+.qc-bg-color-blue-piv {
+  background-color: #095797;
+}
+
+.qc-bg-color-blue-medium {
+  background-color: #19406C;
+}
+
+.qc-bg-color-blue-dark {
+  background-color: #223654;
+}
+
+.qc-bg-color-purple {
+  background-color: #6b4fa1;
+}
+
+.qc-bg-color-grey-pale {
+  background-color: #f1f1f2;
+}
+
+.qc-bg-color-grey-light {
+  background-color: #c5cad2;
+}
+
+.qc-bg-color-grey-regular {
+  background-color: #8893a2;
+}
+
+.qc-bg-color-grey-medium {
+  background-color: #6b778a;
+}
+
+.qc-bg-color-grey-dark {
+  background-color: #4e5662;
+}
+
+.qc-bg-color-pink-pale {
+  background-color: #ffdbd6;
+}
+
+.qc-bg-color-pink-regular {
+  background-color: #e58271;
+}
+
+.qc-bg-color-red-regular {
+  background-color: #cb381f;
+}
+
+.qc-bg-color-red-dark {
+  background-color: #692519;
+}
+
+.qc-bg-color-green-pale {
+  background-color: #d7f0bb;
+}
+
+.qc-bg-color-green-regular {
+  background-color: #4f813d;
+}
+
+.qc-bg-color-green-dark {
+  background-color: #2c4024;
+}
+
+.qc-bg-color-yellow-pale {
+  background-color: #f8e69a;
+}
+
+.qc-bg-color-yellow-regular {
+  background-color: #e0ad03;
+}
+
+.qc-bg-color-yellow-dark {
+  background-color: #ad781c;
+}
+
+.qc-bg-color-text-primary {
+  background-color: var(--qc-color-blue-dark);
+}
+
+.qc-bg-color-accent {
+  background-color: var(--qc-color-pink-regular);
+}
+
+.qc-bg-color-success {
+  background-color: var(--qc-color-green-regular);
+}
+
+.qc-bg-color-error {
+  background-color: var(--qc-color-red-regular);
+}
+
+.qc-bg-color-danger {
+  background-color: var(--qc-color-red-dark);
+}
+
+.qc-bg-color-link-text {
+  background-color: var(--qc-color-blue-piv);
+}
+
+.qc-bg-color-link-hover {
+  background-color: var(--qc-color-blue-piv);
+}
+
+.qc-bg-color-link-visited {
+  background-color: var(--qc-color-purple);
+}
+
+.qc-bg-color-link-active {
+  background-color: var(--qc-color-red-regular);
+}
+
+.qc-gallery {
+  overflow: hidden;
+  margin-top: 0.8rem;
+}
+
+figure {
+  display: table;
+  margin: 0 0 3.2rem 0;
+}
+figure img {
+  max-width: 100%;
+  height: auto;
+}
+
+figcaption {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
+  display: table-caption;
+  caption-side: bottom;
+  background-color: var(--qc-color-grey-pale);
+  padding: 0.8rem;
+  margin-top: 0.8rem;
+  margin-bottom: var(--qc-spacer-md);
+}
+figcaption p {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
+}
+figcaption p:last-child {
+  margin-bottom: 0;
+}
+
+ul {
+  list-style: disc;
+  margin-top: 0;
+  margin-bottom: var(--qc-spacer-list-mb);
+  padding-left: var(--qc-spacer-list-pl);
+}
+ul li {
+  margin-bottom: var(--qc-spacer-list-item-mb);
+}
+ul ul {
+  margin-top: var(--qc-spacer-list-item-mb);
+  list-style: circle;
+}
+
+.qc-shading-0 {
+  box-shadow: 0 0px 0 var(--qc-box-shadow-color);
+}
+
+.qc-shading-1 {
+  box-shadow: 0 1px 4px var(--qc-box-shadow-color);
+}
+
+.qc-shading-2 {
+  box-shadow: 0 2px 8px var(--qc-box-shadow-color);
+}
+
+.qc-shading-3 {
+  box-shadow: 0 3px 16px var(--qc-box-shadow-color);
+}
+
+.qc-shading-4 {
+  box-shadow: 0 4px 24px var(--qc-box-shadow-color);
+}
+
+table.qc-table {
+  margin-bottom: 0;
+  background-color: var(--qc-color-white);
+  width: 100%;
+  border-collapse: collapse;
+  /* ----- Striped tables ----- */
+  /* ----- Bordered tables ----- */
+  /* ----- TODO add footer style ----- */
+}
+table.qc-table > thead {
+  background-color: var(--qc-color-blue-dark);
+  color: var(--qc-color-white);
+  border: 1px solid var(--qc-color-blue-dark);
+}
+table.qc-table > thead th {
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
+}
+table.qc-table thead th, table.qc-table tbody th, table.qc-table tbody td {
+  vertical-align: middle;
+  text-align: left;
+  padding: var(--qc-spacer-sm);
+}
+table.qc-table.qc-striped tbody tr:nth-of-type(even) {
+  background-color: var(--qc-color-grey-pale);
+}
+table.qc-table.qc-bordered tbody th, table.qc-table.qc-bordered tbody td {
+  border-bottom: 1px solid var(--qc-color-grey-light);
+}
+
+.qc-notice {
+  display: flex;
+  border: 1px solid var(--qc-color-grey-light);
+  background-color: var(--qc-color-white);
+  word-break: break-word;
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
+  margin-bottom: 3.2rem;
+  /*TODO Quelle est la marge entre le titre et le texte? Rien de spécifié dans le SDG. */
+}
+.qc-notice .icon-container {
+  display: flex;
+  padding: var(--qc-spacer-md) var(--qc-spacer-xs);
+  background-color: var(--qc-color-blue-pale);
+}
+.qc-notice .icon-container .qc-icon {
+  background-size: 100% auto;
+  min-width: var(--qc-spacer-md);
+  height: var(--qc-spacer-md);
+}
+.qc-notice.qc-information .icon-container {
+  background-color: var(--qc-color-blue-pale);
+}
+.qc-notice.qc-warning .icon-container {
+  background-color: var(--qc-color-yellow-pale);
+}
+.qc-notice.qc-success .icon-container {
+  background-color: var(--qc-color-green-pale);
+}
+.qc-notice.qc-error .icon-container {
+  background-color: var(--qc-color-pink-pale);
+}
+.qc-notice .title {
+  margin: 0 0 var(--qc-spacer-xs) 0;
+  padding: 0;
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-bold);
+  font-family: var(--qc-font-family-content);
+}
+.qc-notice .content {
+  padding: var(--qc-spacer-md) 3.2rem var(--qc-spacer-md) var(--qc-spacer-sm);
+  width: 100%;
+}
+.qc-notice .content:last-child {
+  margin-bottom: 0;
+}
+
+/* Links in a error notice (eg. error summary) */
+qc-notice[type=error] ul li a {
+  color: var(--qc-color-red-regular);
+}
+qc-notice[type=error] ul li a:hover, qc-notice[type=error] ul li a:focus {
+  text-decoration: none;
+}
+
+@media (max-width: 575.98px) {
+  .qc-notice .content {
+    padding: var(--qc-spacer-md) var(--qc-spacer-md) var(--qc-spacer-md) var(--qc-spacer-sm);
+  }
+}
 .qc-container,
 .qc-container-fluid,
 .qc-container-xl,
@@ -1266,197 +1657,4 @@ code, .qc-code {
   .qc-offset-xl-11 {
     margin-left: 91.66666667%;
   }
-}
-.qc-bg-color-white {
-  background-color: white;
-}
-
-.qc-bg-color-blue-pale {
-  background-color: #dae6f0;
-}
-
-.qc-bg-color-blue-light {
-  background-color: #4a98d9;
-}
-
-.qc-bg-color-blue-regular {
-  background-color: #1479cc;
-}
-
-.qc-bg-color-blue-piv {
-  background-color: #095797;
-}
-
-.qc-bg-color-blue-medium {
-  background-color: #19406C;
-}
-
-.qc-bg-color-blue-dark {
-  background-color: #223654;
-}
-
-.qc-bg-color-purple {
-  background-color: #6b4fa1;
-}
-
-.qc-bg-color-grey-pale {
-  background-color: #f1f1f2;
-}
-
-.qc-bg-color-grey-light {
-  background-color: #c5cad2;
-}
-
-.qc-bg-color-grey-regular {
-  background-color: #8893a2;
-}
-
-.qc-bg-color-grey-medium {
-  background-color: #6b778a;
-}
-
-.qc-bg-color-grey-dark {
-  background-color: #4e5662;
-}
-
-.qc-bg-color-pink-pale {
-  background-color: #ffdbd6;
-}
-
-.qc-bg-color-pink-regular {
-  background-color: #e58271;
-}
-
-.qc-bg-color-red-regular {
-  background-color: #cb381f;
-}
-
-.qc-bg-color-red-dark {
-  background-color: #692519;
-}
-
-.qc-bg-color-green-pale {
-  background-color: #d7f0bb;
-}
-
-.qc-bg-color-green-regular {
-  background-color: #4f813d;
-}
-
-.qc-bg-color-green-dark {
-  background-color: #2c4024;
-}
-
-.qc-bg-color-yellow-pale {
-  background-color: #f8e69a;
-}
-
-.qc-bg-color-yellow-regular {
-  background-color: #e0ad03;
-}
-
-.qc-bg-color-yellow-dark {
-  background-color: #ad781c;
-}
-
-.qc-bg-color-text-primary {
-  background-color: var(--qc-color-blue-dark);
-}
-
-.qc-bg-color-accent {
-  background-color: var(--qc-color-pink-regular);
-}
-
-.qc-bg-color-success {
-  background-color: var(--qc-color-green-regular);
-}
-
-.qc-bg-color-error {
-  background-color: var(--qc-color-red-regular);
-}
-
-.qc-bg-color-danger {
-  background-color: var(--qc-color-red-dark);
-}
-
-.qc-bg-color-link-text {
-  background-color: var(--qc-color-blue-piv);
-}
-
-.qc-bg-color-link-hover {
-  background-color: var(--qc-color-blue-piv);
-}
-
-.qc-bg-color-link-visited {
-  background-color: var(--qc-color-purple);
-}
-
-.qc-bg-color-link-active {
-  background-color: var(--qc-color-red-regular);
-}
-
-.qc-gallery {
-  overflow: hidden;
-  margin-top: 0.8rem;
-}
-
-figure {
-  display: table;
-  margin: 0 0 3.2rem 0;
-}
-figure img {
-  max-width: 100%;
-  height: auto;
-}
-
-figcaption {
-  font-size: var(--qc-font-size-sm);
-  line-height: var(--qc-line-height-sm);
-  display: table-caption;
-  caption-side: bottom;
-  background-color: var(--qc-color-grey-pale);
-  padding: 0.8rem;
-  margin-top: 0.8rem;
-  margin-bottom: var(--qc-spacer-md);
-}
-figcaption p {
-  font-size: var(--qc-font-size-sm);
-  line-height: var(--qc-line-height-sm);
-}
-figcaption p:last-child {
-  margin-bottom: 0;
-}
-
-ul {
-  list-style: disc;
-  margin-top: 0;
-  margin-bottom: var(--qc-spacer-list-mb);
-  padding-left: var(--qc-spacer-list-pl);
-}
-ul li {
-  margin-bottom: var(--qc-spacer-list-item-mb);
-}
-ul ul {
-  margin-top: var(--qc-spacer-list-item-mb);
-  list-style: circle;
-}
-
-.qc-shading-0 {
-  box-shadow: 0 0px 0 var(--qc-box-shadow-color);
-}
-
-.qc-shading-1 {
-  box-shadow: 0 1px 4px var(--qc-box-shadow-color);
-}
-
-.qc-shading-2 {
-  box-shadow: 0 2px 8px var(--qc-box-shadow-color);
-}
-
-.qc-shading-3 {
-  box-shadow: 0 3px 16px var(--qc-box-shadow-color);
-}
-
-.qc-shading-4 {
-  box-shadow: 0 4px 24px var(--qc-box-shadow-color);
 }
