--- a/src/scss/qc-sgd-no-grid.scss
+++ b/src/scss/qc-sgd-no-grid.scss
@@ -7,5 +7,7 @@
 @use "base/fonts" as *;
 @use "base/shadings" as *;
 @use "base/tables" as *;
+@use "utilities/display" as *;
 @use "./components/icons" as *;
 @use "./components/notice" as *;
+@use "./components/pivHeader" as *;
