--- a/src/scss/modules/_grid.scss
+++ b/src/scss/modules/_grid.scss
@@ -1,24 +1,4 @@
-@use "utils" as utils;
-@use "map" as *;
-@use "tokens";
-@use "sass:map";
-// Merci ! / ty Bootstrap
-@import "bootstrap-for-qc-sdg/scss/functions";
-@import "bootstrap-for-qc-sdg/scss/variables";
-
-$enable-grid-classes: utils.$enable-grid-classes;
-$enable-deprecation-messages : false;
-$grid-breakpoints: map.get(tokens.$xl-tokens, grid, breakpoint);
-$grid-gutter-width: tokens.token-value(grid gutter);
-$container-max-widths: map.get(tokens.$xl-tokens, grid, container-max-width);
-
-$spacers : (
-    0: 0,
-    1: tokens.token-value(spacer sm),
-    2: tokens.token-value(spacer md),
-    3: tokens.token-value(spacer lg),
-    4: tokens.token-value(spacer xl),
-);
+@import "settings/grid";
 
 @import "bootstrap-for-qc-sdg/scss/mixins/breakpoints";
 @import "bootstrap-rewrite/mixins/grid";
