--- a/src/scss/qc-design-tokens.scss
+++ b/src/scss/qc-design-tokens.scss
@@ -2,7 +2,7 @@
 @use "modules/map" as *;
 @use "modules/grid" as *;
 
-:root {
+:root, [slot] {
 
    @each $breakpoint, $settings in $breakpoints-tokens {
       @include media-breakpoint-down($breakpoint) {
