--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -644,6 +644,7 @@ table.qc-table {
   border-collapse: collapse;
   /* ----- Striped tables ----- */
   /* ----- Bordered tables ----- */
+  /* ----- TODO add footer style ----- */
 }
 table.qc-table > thead {
   background-color: var(--qc-color-blue-dark);
